--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 spring.application.name=chatopBackend
 
+server.port=3001
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.datasource.url = jdbc:mysql://127.0.0.1:3306/?user=root
 spring.datasource.username = root
 spring.datasource.password = @Caporal2024
+
 
 # Hibernate properties
 spring.jpa.database = default
