commit fixing login from the front

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=chatopBackend
-
+spring.mvc.dispatch-options-request=true
 server.port=3001
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
