--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,17 +3,8 @@ spring.mvc.dispatch-options-request=true
 server.port=3001
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.datasource.url = jdbc:mysql://127.0.0.1:3306/?user=root
+spring.datasource.url = jdbc:mysql://127.0.0.1:3306/sys
 spring.datasource.username = root
 spring.datasource.password = @Caporal2024
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-
-# Hibernate properties
-spring.jpa.database = default
-spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto = update
-spring.jpa.properties.hibernate.format_sql=true
-logging.level.org.hibernate=INFO
-
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
